--- a/repertoire.ui/src/theme/active.module.css
+++ b/repertoire.ui/src/theme/active.module.css
@@ -1,5 +1,5 @@
 .active {
-  transition: transform 200ms ease-in-out;
+  transition: transform 200ms ease;
 
   &:active {
     transform: scale(0.85);
