--- a/repertoire.ui/src/index.css
+++ b/repertoire.ui/src/index.css
@@ -5,6 +5,7 @@ body,
 #root,
 .app,
 .content {
+  overflow: hidden;
   height: 100%;
   width: 100%;
   margin: 0;
@@ -12,6 +13,7 @@ body,
 }
 
 .app {
+  overflow: auto;
   display: flex;
   position: relative;
 }
