#574 UI - Index Css - Disable selectable text due to problems while drag selecting

--- a/repertoire.ui/src/index.css
+++ b/repertoire.ui/src/index.css
@@ -16,3 +16,18 @@ body,
   display: flex;
   position: relative;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+div {
+  user-select: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+}
